# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  26 Feb 2008; Andrew Gaffney <agaffney@gentoo.org>
  modules/generic_stage_target.py:
  Fix leading whitespace in empty() so it's only executed if there's something
  to execute it on. Thanks to Justin Bronder <jsbronder@gentoo.org> in bug
  211410 for pointing this out

  21 Feb 2008; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/rc-update.sh:
  Quote baselayout package atom

  21 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/chroot-functions.sh:
  OK, we shouldn't use which to find env-update, since /usr/sbin isn't in the
  PATH by default. Instead, simply check if it exists.

  21 Feb 2008; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/chroot-functions.sh:
  Remove temporary package listing code, since --verbose is forced on with
  --debug

  21 Feb 2008; Andrew Gaffney <agaffney@gentoo.org> catalyst:
  Force-enable --verbose when using --debug

  21 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/kmerge.sh:
  Changing modules-update to update-modules to quiet a warning and keep us
  from having it get removed out from under us.

  21 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/chroot-functions.sh:
  Adding a note to myself for better debug and moving run_default_funcs to the
  bottom of the script so it gets executed. Since this can otherwise break
  pkgcache, I'm making this catalyst 2.0.6_pre9 for testing, immediately.

  21 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-chroot.sh, targets/stage2/stage2-chroot.sh,
  targets/support/chroot-functions.sh:
  Moved creating of stage1 package list to the beginning of stage1-chroot.sh
  so we can get the output with --debug, added --newuse to the options for
  stage1, as we should always rebuild any package where the USE has changed,
  removed removal of portage logs from stage2-chroot.sh since it is being done